[project]
name = "retry-service"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "sqlalchemy[asyncio]>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
